# simple-c-compiler

./: CMakeLists.txt
src/common/: CMakeLists.txt
src/common/hash_table/: hash_table.c  hash_table.h
src/common/list/: list.c  list.h
src/common/utility/: utility.c  utility.h
tests/: CMakeLists.txt
tests/common/: hash_table_tests.c  list_tests.c
